


syntax = "proto3";

package load;

service LoadService {
  // Post a load to the database
  rpc AddNewLoad (NewLoadData) returns (LoadResponse);
  rpc GetShipperBids (UserId) returns (ShipperBidsInfoResponse);
   rpc GetLoadInfo (UserId) returns (LoadResponse);
    // Get a list of all bids
  rpc GetAllBids (UserId) returns (BidListResponse);
   rpc GetAllActiveBids (UserId) returns (BidListResponse);
  rpc AddBid (BidData) returns (BidDataResponse); 
  
 rpc PostLoadUpdate (LoadUpdateRequest) returns (BidDataResponse); 


 
 
}
message UserId {
  string id = 1;
}
message Empty {}
message ShipperBidsInfoResponse {
  bool success =  1;
  repeated LoadData bids = 2;
  string message= 3;
}

message LoadUpdateRequest {
  string id = 1;
  string bidId = 2;
}


message Address {
  string addressLine1 = 1;
  string addressLine2 = 2;
  string city = 3;
  string state = 4;
  string postalCode = 5;
}
message BidData {
  Bid bid = 1;
}
message BidDataResponse {
  bool success = 1;
  string message =2;
}

message Bid {
  string vehicle = 1;
  string driver = 2;
  int32 bid = 3;
  bool termsAccepted = 4;
  string loadRefId = 5;
  string companyName = 6;
  string companyPhone = 7;
  string firstName = 8;
  string lastName = 9;
  string companyRefId = 10;
}
message ResponseBid {
  string vehicle = 1;
  string driver = 2;
  int32 bid = 3;
  bool termsAccepted = 4;
  string loadRefId = 5;
  string companyName = 6;
  string companyPhone = 7;
  string firstName = 8;
  string lastName = 9;
  string companyRefId = 10;
  string _id = 11;
}








message Company {
  string companyRefId = 1;
  string companyName = 2;
  Address address = 3;
  string contactPerson = 4;
  string contactNumber = 5;
}

message LoadData {
  
  string agentContact = 1;
  string agentName = 2;
  string appointment1 = 3;
  optional string appointment2 = 4;
  optional string appointment3 = 5;
  int32 basePrice = 6;
  Company dropoff1 = 7;
  optional Company dropoff2 = 8;
  optional Company dropoff3 = 9;
  Company pickupLocation = 10;
  optional string containerFeet = 11;
  string dispatchDateTime = 12;
  int32 dropoffs = 13;
  string expectedDelivery = 14;
  optional string lcvBody = 15;
  string material = 16;
 optional string mhcvSubtype = 17;
  optional string mixerCapacity = 18;
  int32 quantity = 19;
  optional string tipperLoad = 20;
  optional string trailerFeet = 21;
  string vehicleBody = 22;
  string vehicleType = 23;
  string shipperRefId = 24;
  string status = 25;
  string _id = 26;
  repeated ResponseBid bids = 27;
  string selectedBid =28;
  SelectedBidDetails selectedBidDetails = 29;
  string bidCarrier= 30;

  string lowestPrice = 31;
  string assignedDriver = 32;
  string loadId = 33;
   
  
}
message LoadResponse {
  bool success = 1;
   string message = 2;
 optional LoadData load = 3;
 
 
}
message NewLoadData {
  
  string agentContact = 1;
  string agentName = 2;
  string appointment1 = 3;
  optional string appointment2 = 4;
  optional string appointment3 = 5;
  int32 basePrice = 6;
  Company dropoff1 = 7;
  optional Company dropoff2 = 8;
  optional Company dropoff3 = 9;
  Company pickupLocation = 10;
  optional string containerFeet = 11;
  string dispatchDateTime = 12;
  int32 dropoffs = 13;
  string expectedDelivery = 14;
  optional string lcvBody = 15;
  string material = 16;
 optional string mhcvSubtype = 17;
  optional string mixerCapacity = 18;
  int32 quantity = 19;
  optional string tipperLoad = 20;
  optional string trailerFeet = 21;
  string vehicleBody = 22;
  string vehicleType = 23;
  string shipperRefId = 24;
  string status = 25;
  string selectedBid =26;
  string loadId = 27;
  
  
}
message BidListResponse {
   bool success = 1;
   string message = 2;
 repeated LoadData loads = 3;
}
message SelectedBidDetails{
   ResponseBid bid = 1;
   CompanyData companyDetails = 2;
 UserData driverDetails = 3;
 Truck truckDetails = 4;
}



message CompanyData { 
string _id = 1; 
string companyRefId = 2; 
string email = 3; 
Name name = 4; 
Address address = 5;
PersonalDetails personalDetails = 6; 
CompanyDetails companyDetails = 7; 
repeated string clients = 8; 
repeated string pickups = 9; 
string status = 10; 
} 
message Name {
  string firstName = 1;
  string lastName = 2;
}
message PersonalDetails {
  Address address = 1; // Nested Address message
  EmergencyContact emergencyContact = 2; // Nested EmergencyContact message
}
message EmergencyContact {
  string name = 1;
  string phoneNumber = 2;
}
 message CompanyDetails { 
string companyName = 1; 
string companyEmail = 2; 
string companyPhone = 3; 
string taxId = 4; 
Address address = 5;
}  
message UserData {
  string _id = 1;
  string email = 2;
  string username = 3;
  string role = 4;
  Name name = 5; // Nested Name message

  string companyRefId = 6;
  PersonalDetails personalDetails = 7; // Nested PersonalDetails message
  MainCompanyDetails companyDetails = 8;

  string password = 9;
  string status = 10;
  string driversLicenseNumber = 11;
  string aadharCardNumber = 12;
  string accountNumber = 13;
  string dateOfBirth = 14; // ISO 8601 date string
  string driversLicenseExpiry = 15; // ISO 8601 date string
  string idFile = 16; // File path or URL
  string phoneNumber = 17;
  string contractFile = 18; // File path or URL
  string ifscCode = 19;
  string workStatus = 20;
  bool isBoardingCompleted = 21;
}
message MainCompanyDetails{
 string _id = 1;
  Name name = 2;
  string email = 3;
  string companyRefId = 4;
  companyDetails companyDetails = 5;
  
}
message companyDetails{
  string companyName = 1;
  string companyEmail = 2;
  string companyPhone = 3;
  string taxId = 4;
Address address = 5; // Nested Address message
  
}

message Truck {
  
  string companyRefId = 1;
  string VehicleType = 2;
  string VehicleRegistrationNumber = 3;
  string VehicleColor = 4;
  float VehicleWeight = 5;
  string Status = 6;
  int32 YearOfManufacture = 7;
  int32 NumberOfAxles = 8;
  string LicensePlateNumber = 9;
  string VehicleInspectionStatus = 10;
  string MakeAndModel = 11;
  string FuelType = 12;
  float VehicleCapacity = 13;
  string RCOwnerName = 14;
  string ExpiryDate = 15;
  string InsuranceProvider = 16;
  string PolicyNumber = 17;
  string _id =18;
  string workStatus = 19;
}